[UPD] search by press Enter

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/CoWorkers/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/CoWorkers/Index.cshtml
@@ -170,6 +170,13 @@
 </div>
 
 <script type="text/javascript">
+    
+    $('#searchTxt').keydown(function (e) {
+        var code = e.which;
+        if (code == 13) {
+            DoSearch();
+        }
+    });
 
     function DoSearch() {
         var s = $("#searchTxt").val();        
