--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -137,37 +137,19 @@
         };
                 
         //HIDE SHOW
-        $( ".hidebtn" ).on( "click", function() {
-            $( this ).parents( ".notifier-block" ).addClass( "hideshow" );
+        $(".hidebtn").on("click", function (e) {
+            e.preventDefault();
+            $(this).parents(".section-block").addClass("hideshow");
+            $(this).parent().parent().find("#fakeCaseFollowerUsersInput").addClass("hidefollowers");
+            $(this).parent().parent().find("#fake_CaseLog_EmailRecepientsInternalLogTo").addClass("hidefollowers");
+            $(this).parent().parent().find("#fake_CaseLog_EmailRecepientsInternalLogCc").addClass("hidefollowers");
         });
-        $( ".showbtn" ).on( "click", function() {
-            $( this ).parents( ".notifier-block" ).removeClass( "hideshow" );
-        });
-        $(".hidebtn").on("click", function () {
-            $(this).parents(".regarding-block").addClass("hideshowregarding");
-        });
-        $(".showbtn").on("click", function () {
-            $(this).parents(".regarding-block").removeClass("hideshowregarding");
-        });
-        $( ".hidebtn" ).on( "click", function() {
-            $( this ).parents( ".computer-block" ).addClass( "hideshow" );
-        });
-        $( ".showbtn" ).on( "click", function() {
-            $(this).parents(".computer-block").removeClass("hideshow");
-        });
-
-        $( ".hidebtn" ).on( "click", function() {
-            $( this ).parents( ".caseinfo-block" ).addClass( "hideshow" );
-        });
-        $( ".showbtn" ).on( "click", function() {
-            $( this ).parents( ".caseinfo-block" ).removeClass( "hideshow" );
-        });
-
-        $( ".hidebtn" ).on( "click", function() {
-            $( this ).parents( ".casehandling-block" ).addClass( "hideshow" );
-        });
-        $( ".showbtn" ).on( "click", function() {
-            $( this ).parents( ".casehandling-block" ).removeClass( "hideshow" );
+        $(".showbtn").on("click", function (e) {
+            e.preventDefault();
+            $(this).parents(".section-block").removeClass("hideshow");
+            $(this).parent().parent().find("#fakeCaseFollowerUsersInput").removeClass("hidefollowers");
+            $(this).parent().parent().find("#fake_CaseLog_EmailRecepientsInternalLogTo").removeClass("hidefollowers");
+            $(this).parent().parent().find("#fake_CaseLog_EmailRecepientsInternalLogCc").removeClass("hidefollowers");
         });
     </script>
 }
