--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -2,6 +2,8 @@
 @using System.Web.Optimization
 @using System.Linq;
 @using DH.Helpdesk.BusinessData.OldComponents
+@using DH.Helpdesk.Common.Constants
+@using DH.Helpdesk.Common.Enums.Cases
 @using DH.Helpdesk.Common.Enums.Settings
 @using DH.Helpdesk.Common.Extensions.Integer
 @using DH.Helpdesk.Domain.Invoice
@@ -24,12 +26,14 @@
 }
 
 <h4 style="@Model.displayLogInfoHtml()">
-	@if (Model.case_.CaseNumber > 0)
-	{
-		@Translation.Get("Ärende") <span>@Model.case_.CaseNumber - </span>
-	}
-
-	@Translation.Get("Kommunikation")
+    <a href="#" class="showbtn"><i class="icon-plus-sign"></i></a>
+    <a href="#" class="hidebtn"><i class="icon-minus-sign"></i></a>
+    @if (Model.case_.CaseNumber > 0)
+    {
+        @Translation.GetCoreTextTranslation("Ärende")
+        <span>@Model.case_.CaseNumber - </span>
+    }
+    @Model.getSectionHeader(CaseSectionType.Communication, CaseSections.CommunicationHeader) @Model.getSectionHeaderFields(CaseSectionType.Communication)
 </h4>
 @if (Model.templateistrue != 1 && !readonlyMode)
 {
@@ -177,12 +181,12 @@
                         <div>
                             <a href="#case_internal_log_to_btn" role="button" class="btn case-usersearch-btn" data-src="case" data-toggle="modal">@btnToLabel</a>
                             @Html.HiddenFor(model => model.CaseLog.EmailRecepientsInternalLogTo, new { id = "caseLog_EmailRecepientsInternalLogTo", @readonly = "true"})
-                            <div id="fake_CaseLog_EmailRecepientsInternalLogTo" contenteditable="true" style="z-index: 2" class="case-send-emails-div case-usersearch-textarea"></div>
+                            <div id="fake_CaseLog_EmailRecepientsInternalLogTo" contenteditable="true" style="z-index: 2" class="case-send-emails-div case-usersearch-textarea @Model.getSearchEmailClass(CaseSectionType.Communication)"></div>
                         </div>
                         <div >
                             <a href="#case_internal_log_cc_btn" role="button" class="btn case-usersearch-btn" data-src="case" data-toggle="modal">@Translation.GetForJS("Kopia")</a>
                             @Html.HiddenFor(model => model.CaseLog.EmailRecepientsInternalLogCc, new { id = "caseLog_EmailRecepientsInternalLogCc", @readonly = "true"})
-                            <div id="fake_CaseLog_EmailRecepientsInternalLogCc" contenteditable="true" style="z-index: 1" class="case-send-emails-div case-usersearch-textarea"></div>
+                            <div id="fake_CaseLog_EmailRecepientsInternalLogCc" contenteditable="true" style="z-index: 1" class="case-send-emails-div case-usersearch-textarea @Model.getSearchEmailClass(CaseSectionType.Communication)"></div>
                         </div>
 
 						@if (Model.templateistrue != 1 && !readonlyMode)
@@ -359,9 +363,9 @@
 					@if (Model.CustomerSettings.ModuleInvoice == true)
 					{
 						<div id="divInvoice" style="@Model.ShowInvoiceFields.displayHtml()">
-							<h4>
-								@Translation.Get("Fakturering")
-							</h4>
+						    <h4>
+						        @Model.getSectionHeader(CaseSectionType.Invoicing, CaseSections.InvoicingHeader)
+						    </h4>
 							@{
 								var invoiceClaimed = Model.CaseLog.InvoiceRow != null
 									&& Model.CaseLog.InvoiceRow.Status.HasValue
