--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -35,7 +35,8 @@
         emailAlreadyAdded: '@Translation.GetForJS("Same email already added.")',
         initGroup: '@Translation.GetForJS("User")',
         closeBtn: '@Html.Raw(Translation.GetForJS("Close"))',
-        selectedLabel: '@Translation.GetForJS("selected")'
+        selectedLabel: '@Translation.GetForJS("selected")',
+        noResultLabel: '@Translation.GetForJS("Inga resultat matchar")'
     }
 
 </script>
