--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
@@ -14,7 +14,7 @@
     <div>
         <table class="tableform">
             <tr>
-                <td style="width:100px">
+                <td style="width:200px">
                     @Translation.GetCoreTextTranslation("Sök")
                 </td>
                 <td>
@@ -23,12 +23,24 @@
                     <i id="icoImg" class="icon-plus-sign" ; style="cursor: pointer;" onclick="showDiv()"></i>
                 </td>
             </tr>
-            @*<tr>
-                <td>
+            <tr>
+                <td style="width:200px">
                     <span>@Translation.Get("Visa endast aktiva")</span>
-                    <input type="checkbox" onchange="test()" class="switchcheckbox showonly-active" @(Model.FirstOrDefault().IsShowOnlyActive ? "checked" : string.Empty)>
                 </td>
-            </tr>*@
+                <td>
+                    @if (Model.FirstOrDefault()!= null)
+                    {
+                        <input type="checkbox" onchange="test(this)" id="chkActive" class="switchcheckbox showonly-active" @(Model.FirstOrDefault().IsShowOnlyActive ? "checked" : string.Empty)>
+                    }
+                    else
+                    {
+                        <input type="checkbox" onchange="test(this)" id="chkActive" class="switchcheckbox showonly-active" @(string.Empty)>
+                    }
+                </td>
+
+
+
+            </tr>
         </table>
     </div>
     <table class="table table-striped table-bordered table-hover" id="tblCaseSolution">
@@ -112,10 +124,9 @@
 
 <script type="text/javascript">
 
-    function test()
-    {
+    function test(t) {
 
-        
+
     }
 
     function showDiv() {
